src/objects/SCOM_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>&quot;cmdb_ci&quot; from the changerequest.csv</description>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <description>&quot;approval&quot; column from the changerequest.csv</description>
        <label>Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approvers__c</fullName>
        <description>&quot;u_is_approvers&quot; from the changerequest.csv</description>
        <label>Approvers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Request_Number__c</fullName>
        <externalId>true</externalId>
        <label>Change Request Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>&quot;end_date&quot; column from changerequest.csv</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hyperlink__c</fullName>
        <description>&quot;change_request_hyperlink&quot; column from changerequest.csv</description>
        <label>Hyperlink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Reviewers__c</fullName>
        <description>&quot;u_implementation_reviewers&quot; column from the changerequest.csv</description>
        <label>Implementation Reviewers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opened_At__c</fullName>
        <description>Column &quot;opened_at&quot; from the changerequest.csv.</description>
        <label>Opened At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opened_By__c</fullName>
        <description>Column &quot;opened_by&quot; from the changerequest.csv.</description>
        <label>Opened By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>&quot;parent&quot; column from the changerequest.csv</description>
        <label>Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>&quot;priority&quot; column from the changerequest.csv</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By_Date__c</fullName>
        <description>&quot;requested_by_date&quot; column from changerequest.csv</description>
        <label>Requested By Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>&quot;short_description&quot; column from the changerequest.csv</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>&quot;u_source_type&quot; column from changerequest.csv</description>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed Standard Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode 2 Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>&quot;start_date&quot; column from changerequest.csv</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>&quot;State&quot; field from the changerequest.csv.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Implementation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergoing Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergoing Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>&quot;urgency&quot; column from changerequest.csv</description>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SCOM Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Change Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCOM Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>